--- a/package.json
+++ b/package.json
@@ -20,9 +20,20 @@
   "author": "Nicoi Alexandru",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
+    "helmet": "^5.0.2",
+    "html-pdf-node": "^1.0.8",
+    "nodemailer": "^6.7.2",
+    "pg": "^8.7.1",
+    "qrcode": "^1.5.0",
+    "request": "^2.88.2",
+    "sass": "^1.49.0",
+    "sharp": "^0.29.3",
+    "xml-js": "^1.6.11"
   },
   "engines": {
     "node": "14.x"
